--- a/packages/rc-app/side-by-side.html
+++ b/packages/rc-app/side-by-side.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div>
-    <iframe id='iframe0' frameborder="0" scrolling="no" width="400px" height="600px" align="left"> </iframe>
+    <iframe id="iframe0" frameborder="0" scrolling="no" width="400px" height="600px" align="left"> </iframe>
   </div>
-  
+
   <div>
-    <iframe id='iframe1' frameborder="0" scrolling="no" width="400px" height="600px" align="right"></iframe>
+    <iframe id="iframe1" frameborder="0" scrolling="no" width="400px" height="600px" align="right"></iframe>
   </div>
   <script>
     var urlParams = new URLSearchParams(window.location.search);
@@ -23,4 +23,3 @@
     document.getElementById('iframe1').setAttribute('src', url0);
   </script>
 </body>
-
